--- a/metadata.yaml
+++ b/metadata.yaml
@@ -26,6 +26,7 @@ subjects:
 - !lcsh 'Garibaldi, Giuseppe, 1807-1882 -- Fiction'
 - !lcc 'PQ'
 - !lcsh 'Spedizione dei Mille (1860) -- Fiction'
+- GITenberg
 title: 'La camicia rossa
 
   Episodi - Terza edizione riveduta e corretta'
